Rename bloom_rates references to bloom_trade_client

--- a/app/views/layouts/bloom_trade_client/application.html.erb
+++ b/app/views/layouts/bloom_trade_client/application.html.erb
@@ -5,8 +5,8 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag    "bloom_rates/application", media: "all" %>
-  <%= javascript_include_tag "bloom_rates/application" %>
+  <%= stylesheet_link_tag    "bloom_trade_client/application", media: "all" %>
+  <%= javascript_include_tag "bloom_trade_client/application" %>
 </head>
 <body>
 
